2001-01-28  Andrew Choi  <akochoi@i-cable.com>

	* src/macfns.c (QCconversion): Replaces QCalgorithm.

	* src/macfns.c (image_ascent, lookup_image): Adapt to change of
	image margins.

	* src/macterm.c (x_produce_image_glyph, x_draw_image_foreground)
	(x_draw_image_relief, x_draw_image_foreground_1)
	(x_draw_image_glyph_string): Adapt to change of image margins.

	* src/macterm.c (mac_to_x_fontname): Change charset name of
	Simplify Chinese fonts from gb2312 to gb2312.1980 and Korean fonts
	from ksc5601 to ksc5601.1989.
	
2000-12-12  Andrew Choi  <akochoi@i-cable.com>

	* cw5-mcp.xml: add md5.c to project.

	* cw6-mcp.xml: add md5.c to project.

	* src/macfns.c (x_create_tip_frame, Fx_hide_tip): change to handle
	Lisp_Object type tip_frame (was struct frame *) as in xfns.c.

2000-11-26  Andrew Choi  <akochoi@i-cable.com>

	* src/macterm.c (x_handle_tool_bar_click):
	(note_tool_bar_highlight): change references to members deleted
	from struct frame as in xterm.c.

	* inc/epaths.h: set PATH_EXEC to ~emacs/mac instead of
	~emacs/mac/bin.

2000-10-25  Andrew Choi  <akochoi@i-cable.com>

	* cw5-mcp.xml: renamed from emacs-cw5.mcp.xml.

	* cw6-mcp.xml: renamed from emacs-cw6.mcp.xml.

	* inc/defs-cw5.h: renamed from inc/cmdline-defs-cw5.h.

	* inc/defs-cw6.h: renamed from inc/cmdline-defs-cw6.h.

2000-10-24  Andrew Choi  <akochoi@i-cable.com>

	* src/macterm.c (XTread_socket): check whether Lisp variable
	mac-ready-for-drag-n-drop is bound rather than non-nil value.

2000-10-20  Andrew Choi  <akochoi@users.sourceforge.net>

	* INSTALL: New file.

	* README: New file.

	* TODO: New file.

	* emacs-cw5.mcp.xml: New file.

	* emacs-cw6.mcp.xml: New file.

	* makefile.MPW: New file.

	* inc/alloca.h: New file.

	* inc/cmdline-defs-cw5.h: New file.

	* inc/cmdline-defs-cw6.h: New file.

	* inc/config.h: New file.

	* inc/dirent.h: New file.

	* inc/epaths.h: New file.

	* inc/m-mac.h: New file.

	* inc/macgui.h: New file.

	* inc/macterm.h: New file.

	* inc/pwd.h: New file.
